--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
+<!doctype html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta charset="utf-8">
+<meta name="description" content="ウォッちずは地理院地図に統合されました。">
 <title>地理院地図</title>
-<script type="text/javascript">
-location.replace('http://cyberjapan.jp/');
+<script>
+location.replace('http://maps.gsi.go.jp/');
 </script>
-<meta http-equiv="Refresh" content="0; URL=http://cyberjapan.jp/" />
+<meta http-equiv="Refresh" content="0; URL=http://maps.gsi.go.jp/" />
 </head>
 <body>
 <noscript>
-<p><a href="http://cyberjapan.jp/">地理院地図へ</a></p>
+<p><a href="http://maps.gsi.go.jp/">地理院地図へ</a></p>
 </noscript>
 </body>
 </html>
